examples/test/testpolicy14150.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14150
  namespace: namespace89
spec:
  podSelector:
    matchLabels:
      key20: value15
      key42: value46
      key13: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value30
          key33: value6
      podSelector:
        matchLabels:
          key49: value40
          key21: value10
          key0: value45
